[FIX]: change the how it works text alignment

--- a/src/components/howItWorks/howItWorks.css
+++ b/src/components/howItWorks/howItWorks.css
@@ -12,6 +12,7 @@
 
 .howItWorks h1 {
   color: var(--brand-text);
+  text-align: center;
 }
 
 .howItWorks p {
